# voxide

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  flake.nix  ideas.txt
configs/: 000_EXAMPLE.toml
nix/: default.nix
scripts/: voxide-args-to-lines  voxide-args-to-quickfix  voxide-clipboard-shim  voxide-config-finder  voxide-diff2additionsqf.sh  voxide-file-acronym.rb  voxide-git-files  voxide-git-files-numbered.rb  voxide-nvr-background.rb  voxide-primaryclipboard-or-files  voxide-rails-routes.rb  voxide-rails.rb  voxide-show-jumper  voxide-vim-history-files  voxide-vim-rubocop  voxide-zellij-screen-files.rb
src/: command_wrapper.rs  config.rs  init_from_builtin_files.rs  main.rs  mode_script_runner.rs  os_util.rs  path_util.rs  transforms_applicator.rs  transforms_replacement_preprocessor.rs
tabry/: v.tabry
