[package]
name = "voxide"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
directories = "5.0.1"
env_logger = "0.11.5"
figment = { version = "0.10.19", features = ["toml"] }
include_dir = "0.7.4"
log = "0.4.22"
once_cell = "1.20.2"
regex = "1.11.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tempfile = "3.12.0"
